2006-02-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.25 "eggplant" is released.

2006-02-05  Aidan Kehoe  <kehoea@parhasard.net>

	* easymenu.el: Update copyright. 
	* easymenu.el (easy-menu-all-popups):
	Add a docstring. 
	* easymenu.el (easy-menu-add):
	Document a bug, rework the function to preserve any existing
	non-default mode-popup-menu instead of overwriting it, and not to
	bother normalising the menu title (nothing else does).
	* easymenu.el (easy-menu-remove):
	Restore the default mode-popup-menu instead of leaving an empty
	one when we remove the last easy-menu popup. 

2004-01-19  Martin Buchholz  <martin@xemacs.org>

	* font-lock.el: Add support for not-so recent changes in Java to
	java-mode.

2006-01-08  Aidan Kehoe  <kehoea@parhasard.net>

	* cmdloop.el (read-quoted-char):
	Eliminate some char/event confusion introduced by a GNU Emacs
	sync.
	
2006-01-06  Adrian Aichner  <adrian@xemacs.org>

	* package-get.el (package-get-download-sites): Add pt.xemacs.org,
	as suggested by Rodrigo Ventura.
	* package-get.el (package-get-pre-release-download-sites): Ditto,
	with replacement of xemacs-21.5 by beta, which is the logical path
	to our beta core and package pre-releases.

2005-12-30  Mike Sperber  <mike@xemacs.org>

	* packages.el (packages-find-all-package-hierarchies): Interpret
	EMACSPACKAGEPATH as listing package direcories, not hierarchies.
	This fixes a regression introduced in the change on 2005-01-08.

2005-11-25  Mike Sperber  <mike@xemacs.org>

	* packages.el (packages-find-package-hierarchies-named): Use
	`file-name-as-directory' to normalize something which may not
	have a trailing path separator.

	* package-get.el (package-get-package-index-file-location): Fix
	essentially bogus definition.

	* package-admin.el (package-admin-find-top-directory): Use the
	existing variables rather than groking the paths from scratch, and
	greatly simplify.

	* packages.el (packages-find-all-package-hierarchies): 